--- a/about.html
+++ b/about.html
@@ -109,46 +109,46 @@
                 </h2>
                 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
                     <div
-                        class="reveal flex bg-white p-6 rounded-lg shadow-sm hover:shadow-md transition border-l-4 border-blue-600">
-                        <div class="flex">
-                            <img src="public/img/logo/html.svg" alt="" class="w-6 h-6 mr-3" />
-                            <img src="public/img/logo/css.svg" alt="" class="w-6 h-6 mr-3" />
+                        class="reveal flex bg-white p-6 rounded-lg shadow-sm hover:shadow-md transition border-l-4 border-orange-600">
+                        <div class="flex gap-0.5">
+                            <img src="public/img/logo/html.svg" alt="" class="w-6 h-6" />
+                            <img src="public/img/logo/css.svg" alt="" class="w-6 h-6 me-6" />
                         </div>
                         <p class="font-semibold text-gray-900">HTML & CSS</p>
                     </div>
                     <div
-                        class="reveal flex bg-white p-6 rounded-lg shadow-sm hover:shadow-md transition border-l-4 border-purple-600">
+                        class="reveal flex bg-white p-6 rounded-lg shadow-sm hover:shadow-md transition border-l-4 border-yellow-600">
                         <img src="public/img/logo/js.svg" alt="" class="w-6 h-6 mr-3" />
                         <p class="font-semibold text-gray-900">JavaScript (ES6+)</p>
                     </div>
                     <div
-                        class="reveal flex bg-white p-6 rounded-lg shadow-sm hover:shadow-md transition border-l-4 border-green-600">
+                        class="reveal flex bg-white p-6 rounded-lg shadow-sm hover:shadow-md transition border-l-4 border-green-400">
                         <img src="public/img/logo/tailwindcss.svg" alt="" class="w-6 h-6 mr-3" />
                         <p class="font-semibold text-gray-900">Tailwind CSS</p>
                     </div>
                     <div
-                        class="reveal flex bg-white p-6 rounded-lg shadow-sm hover:shadow-md transition border-l-4 border-orange-600">
+                        class="reveal flex bg-white p-6 rounded-lg shadow-sm hover:shadow-md transition border-l-4 border-indigo-700">
                         <img src="public/img/logo/bootstrap.svg" alt="" class="w-6 h-6 mr-3" />
                         <p class="font-semibold text-gray-900">Responsive Design</p>
                     </div>
                     <div
-                        class="reveal flex bg-white p-6 rounded-lg shadow-sm hover:shadow-md transition border-l-4 border-red-600">
-                        <div class="flex">
-                            <img src="public/img/logo/php.svg" alt="" class="w-6 h-6 mr-3" />
-                            <img src="public/img/logo/laravel.svg" alt="" class="w-6 h-6 mr-3" />
+                        class="reveal flex bg-white p-6 rounded-lg shadow-sm hover:shadow-md transition border-l-4 border-indigo-500">
+                        <div class="flex gap-0.5">
+                            <img src="public/img/logo/php.svg" alt="" class="w-6 h-6" />
+                            <img src="public/img/logo/laravel.svg" alt="" class="w-6 h-6 me-7" />
                         </div>
                         <p class="font-semibold text-gray-900">PHP & Laravel</p>
                     </div>
                     <div
-                        class="reveal flex bg-white p-6 rounded-lg shadow-sm hover:shadow-md transition border-l-4 border-pink-600">
+                        class="reveal flex bg-white p-6 rounded-lg shadow-sm hover:shadow-md transition border-l-4 border-red-400">
                         <img src="public/img/logo/my-sql.svg" alt="" class="w-6 h-6 mr-3" />
                         <p class="font-semibold text-gray-900">MySQL Database</p>
                     </div>
                     <div
-                        class="reveal flex bg-white p-6 rounded-lg shadow-sm hover:shadow-md transition border-l-4 border-indigo-600">
-                        <div class="flex">
-                            <img src="public/img/logo/git.svg" alt="" class="w-6 h-6 mr-3" />
-                            <img src="public/img/logo/github.svg" alt="" class="w-6 h-6 mr-3" />
+                        class="reveal flex bg-white p-6 rounded-lg shadow-sm hover:shadow-md transition border-l-4 border-black">
+                        <div class="flex gap-0.5">
+                            <img src="public/img/logo/github.svg" alt="" class="w-6 h-6" />
+                            <img src="public/img/logo/git.svg" alt="" class="w-6 h-6 me-7" />
                         </div>
                         <p class="font-semibold text-gray-900">Git & GitHub</p>
                     </div>
